--- a/index.html
+++ b/index.html
@@ -11,11 +11,69 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400&family=Roboto:wght@100;300;400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+
+    <!--Home-->
+
+    <header>
+        <nav class="navbar navbar-expand-xl navbar-dark p-1" style="background-color: #2A1E25;">
+            <div class="container-fluid">
+                <a class="navbar-brand p-0 m-0" href="#">
+                    <img src="./assets/images/logo.png" alt="logo" width="189px" height="90px" id="logo">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">
+                    </span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link fs-4" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-4" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-4" href="#">Market</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-4" href="#">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fs-4" href="#">Testimonials</a>
+                        </li>
+                    </ul>
+
+                    <div class="d-flex credentials" role="search">
+                        <button type="submit">Log in</button>
+                        <button class="ms-3" type="submit">Sign up</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="home">
+            <div class="container text-center">
+                <h1 id="titulo" class="fw-bold">Compete at the highest <br> level and learn from the <br> best</h1>
+                <p id="phrase" class="fs-2">Master your game</p>
+                <button class="btn mt-5">Start</button>
+            </div>
+        </section>
+    </main>
+
+    <!--Services-->
     <section class="services">
         <h1 class="title-service">Services</h1>
         <div class="container text-center">
@@ -33,24 +91,29 @@
                 </div>
 
                 <div class="col-12 col-md-4 col-sm-6 section-service">
-                    <img class="image-service" src="./assets/images/Services/Personalized coaching.png" alt="Personalized coaching">
+                    <img class="image-service" src="./assets/images/Services/Personalized coaching.png"
+                        alt="Personalized coaching">
                     <h2 class="services-title">Personalized coaching</h2>
-                    <p class="service-p">Tailored to each player, focus on specific objectives, guaranteed improvement</p>
+                    <p class="service-p">Tailored to each player, focus on specific objectives, guaranteed improvement
+                    </p>
                 </div>
 
                 <div class="col-12 col-md-4 col-sm-6 section-service">
-                    <img class="image-service" src="./assets/images/Services/Content Managed for You.png" alt="Content Managed for You">
+                    <img class="image-service" src="./assets/images/Services/Content Managed for You.png"
+                        alt="Content Managed for You">
                     <h2 class="services-title">Content Managed for You</h2>
                     <p class="service-p">Customized creation, constant maintenance and updating, unique experience</p>
                 </div>
 
                 <div class="col-12 col-md-4 col-sm-6 section-service">
-                    <img class="image-service" src="./assets/images/Services/Performance Analysis.png" alt="Performance Analysis">
+                    <img class="image-service" src="./assets/images/Services/Performance Analysis.png"
+                        alt="Performance Analysis">
                     <h2 class="services-title">Performance Analysis</h2>
                     <p class="service-p">Comprehensive evaluation, skill optimization, data-driven approach</p>
                 </div>
                 <div class="col-12 col-md-4 col-sm-6 section-service">
-                    <img class="image-service" src="./assets/images/Services/Online Forum and Community.png" alt="Online Forum and Community">
+                    <img class="image-service" src="./assets/images/Services/Online Forum and Community.png"
+                        alt="Online Forum and Community">
                     <h2 class="services-title">Online Forum and Community</h2>
                     <p class="service-p">Enriching discussions, mutual support, collaborative learning environment</p>
                 </div>
@@ -62,12 +125,13 @@
                     Create your product ad and show it in our store
                 </div>
                 <div class="col-xxl-8 withjust align-items-center">
-                    With just a few clicks, you can post ads of your product on LevelUpCenter. Reach all gamers interested in your favorite video game
+                    With just a few clicks, you can post ads of your product on LevelUpCenter. Reach all gamers
+                    interested in your favorite video game
                 </div>
             </div>
             <div class="row separationdownload">
                 <div class="col-xxl-8 col-lg-6 col-md-7 text-end">
-                    <img id="app-image" class="app" src="./assets/images/DownloadSection/app.png" />                
+                    <img id="app-image" class="app" src="./assets/images/DownloadSection/app.png" />
                 </div>
                 <div class="col align-self-center download">
                     <div class="row downloadnow justify-content-center">
@@ -75,12 +139,14 @@
                     </div>
                     <div class="row text-center">
                         <div class="col storespace">
-                            <img id="playstore-image" class="stores"  src="./assets/images/DownloadSection/playstore.png" />               
-                            <img id="appstore-image" class="stores"  src="./assets/images/DownloadSection/appstore.png" />                
-                        </div>                        
+                            <img id="playstore-image" class="stores"
+                                src="./assets/images/DownloadSection/playstore.png" />
+                            <img id="appstore-image" class="stores"
+                                src="./assets/images/DownloadSection/appstore.png" />
+                        </div>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
         <div class="container aboutussection">
             <div class="row aboutus justify-content-center">
@@ -88,18 +154,20 @@
             </div>
             <div class="row">
                 <div class="col missionbox text-end">
-                    <img id= "mission-image" class="missionpic"  src="./assets/images/AboutUsSection/mision.png" />               
+                    <img id="mission-image" class="missionpic" src="./assets/images/AboutUsSection/mision.png" />
                 </div>
                 <div class="col missiontext text-center align-self-center">
-                    Drive player growth and enjoyment by providing personalized coaching, performance analysis, and a collaborative community.
+                    Drive player growth and enjoyment by providing personalized coaching, performance analysis, and a
+                    collaborative community.
                 </div>
             </div>
             <div class="row vision">
                 <div class="col visiontext text-center align-self-center">
-                    To be the leading platform in Peru for improving video game skills, cultivating a local community of talented and committed gamers
+                    To be the leading platform in Peru for improving video game skills, cultivating a local community of
+                    talented and committed gamers
                 </div>
                 <div class="col test">
-                    <img id="vision-image" class="visionpic"  src="./assets/images/AboutUsSection/vision.png" />       
+                    <img id="vision-image" class="visionpic" src="./assets/images/AboutUsSection/vision.png" />
                 </div>
             </div>
         </div>
