Download and Abou Us

--- a/index.html
+++ b/index.html
@@ -119,59 +119,69 @@
                 </div>
             </div>
         </div>
-        <div class="container downloadsection">
-            <div class="row text-center justify-content-center">
-                <div class="col-xxl-8 createproduct align-items-center">
-                    Create your product ad and show it in our store
-                </div>
-                <div class="col-xxl-8 withjust align-items-center">
-                    With just a few clicks, you can post ads of your product on LevelUpCenter. Reach all gamers
-                    interested in your favorite video game
-                </div>
-            </div>
-            <div class="row separationdownload">
-                <div class="col-xxl-8 col-lg-6 col-md-7 text-end">
-                    <img id="app-image" class="app" src="./assets/images/DownloadSection/app.png" />
-                </div>
-                <div class="col align-self-center download">
-                    <div class="row downloadnow justify-content-center">
-                        Descargalo ahora:
-                    </div>
-                    <div class="row text-center">
-                        <div class="col storespace">
-                            <img id="playstore-image" class="stores"
-                                src="./assets/images/DownloadSection/playstore.png" />
-                            <img id="appstore-image" class="stores"
-                                src="./assets/images/DownloadSection/appstore.png" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container aboutussection">
-            <div class="row aboutus justify-content-center">
-                About us
-            </div>
-            <div class="row">
-                <div class="col missionbox text-end">
-                    <img id="mission-image" class="missionpic" src="./assets/images/AboutUsSection/mision.png" />
-                </div>
-                <div class="col missiontext text-center align-self-center">
-                    Drive player growth and enjoyment by providing personalized coaching, performance analysis, and a
-                    collaborative community.
-                </div>
-            </div>
-            <div class="row vision">
-                <div class="col visiontext text-center align-self-center">
-                    To be the leading platform in Peru for improving video game skills, cultivating a local community of
-                    talented and committed gamers
-                </div>
-                <div class="col test">
-                    <img id="vision-image" class="visionpic" src="./assets/images/AboutUsSection/vision.png" />
-                </div>
-            </div>
-        </div>
     </section>
+
+    <!--Download-->
+    <section class="Download">
+        <div class="container">
+        <div class="row text-center justify-content-center">
+            <div class="col-xxl-8 createproduct align-items-center">
+                Create your product ad and show it in our store
+            </div>
+            <div class="col-xxl-8 withjust align-items-center">
+                With just a few clicks, you can post ads of your product on LevelUpCenter. Reach all gamers
+                interested in your favorite video game
+            </div>
+        </div>
+        <div class="row separationdownload">
+            <div class="col-xxl-8 col-lg-6 col-md-7 text-end">
+                <img id="app-image" class="app" src="./assets/images/DownloadSection/app.png" />
+            </div>
+            <div class="col align-self-center download">
+                <div class="row downloadnow justify-content-center">
+                    Descargalo ahora:
+                </div>
+                <div class="row text-center">
+                    <div class="col storespace">
+                        <img id="playstore-image" class="stores"
+                            src="./assets/images/DownloadSection/playstore.png" />
+                        <img id="appstore-image" class="stores"
+                            src="./assets/images/DownloadSection/appstore.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+
+    <!--About us-->
+
+    <section class="Abou-Us">
+        <div class="container">
+        <div class="row aboutus justify-content-center">
+            About us
+        </div>
+        <div class="row">
+            <div class="col missionbox text-end">
+                <img id="mission-image" class="missionpic" src="./assets/images/AboutUsSection/mision.png" />
+            </div>
+            <div class="col missiontext text-center align-self-center">
+                Drive player growth and enjoyment by providing personalized coaching, performance analysis, and a
+                collaborative community.
+            </div>
+        </div>
+        <div class="row vision">
+            <div class="col visiontext text-center align-self-center">
+                To be the leading platform in Peru for improving video game skills, cultivating a local community of
+                talented and committed gamers
+            </div>
+            <div class="col test">
+                <img id="vision-image" class="visionpic" src="./assets/images/AboutUsSection/vision.png" />
+            </div>
+        </div>
+    </div>
+    </section>
+
 </body>
 
 </html>
