add About the Team

--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
     </section>
 
     <!--About us-->
-
     <section class="Abou-Us">
         <div class="container">
         <div class="row aboutus justify-content-center">
@@ -183,7 +182,49 @@
     </section>
 
     <!--About the Team-->
-    
+    <section class="aboutTheTeam">
+        <div class="container text-center">
+            <p class="aboutTheTeam-titulo">About the team</p>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <img src="./assets/images/About the Team/Diego Rosado.png">
+                </div>
+                <div class="col-12 col-md-6">
+                    <p class="row-title"><br>Diego Rosado</p>
+                    <p class="row-bio">Me gusta tener el control sobre lo que hago y ayudar a otros.</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <p class="row-title"><br>Rut Jaramillo</p>
+                    <p class="row-bio">¡Participar en un proyecto referenciado a la comunidad gamer es un placer!</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="./assets/images/About the Team/Rut Jaramillo.png">
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="./assets/images/About the Team/Fredy Almeyda.png">
+                </div>
+                <div class="col-12 col-md-6">
+                    <p class="row-title"><br>Fredy Almeyda</p>
+                    <p class="row-bio">Siempre estoy feliz de desarrollar formas de ayudar a mi comunidad.</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <p class="row-title"><br>Anthony Guerrero</p>
+                    <p class="row-bio">Me gusta cantar y aprender algo nuevo cada día sobre el mundo de la tecnología.</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="./assets/images/About the Team/Anthony Guerrero.png">
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="./assets/images/About the Team/Emerson Quispe.png">
+                </div>
+                <div class="col-12 col-md-6">
+                    <p class="row-title"><br>Emerson Quispe</p>
+                    <p class="row-bio">Me gusta mucho la música y casi siempre realizo mis actividades escuchando canciones.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
