--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <main>
         <section class="home">
             <div class="container text-center">
-                <h1 id="titulo" class="fw-bold">Compete at the highest <br> level and learn from the <br> best</h1>
-                <p id="phrase" class="fs-2">Master your game</p>
+                <h1 id="titulo" class="home-h fw-bold">Compete at the highest <br> level and learn from the <br> best</h1>
+                <p id="phrase" class="home-p fs-2">Master your game</p>
                 <button class="btn mt-5">Start</button>
             </div>
         </section>
