add Testimonials, Coaches and Footer

--- a/index.html
+++ b/index.html
@@ -225,7 +225,89 @@
         </div>
     </section>
 
-    
+    <!--Testimonials-->
+    <section id=testimonials class="testimonials">
+        <h3 class="title">Testimonials</h3>
+        <p>Learn about the experiences of our Amateur players!</p>
+        <br><br>
+        <ul class="grid">
+            <li>
+                <img src="./img/Alicia.png" alt="desarrollo"   width="180" height="160">
+                <h4>Alicia, 22 years</h4>
+                <p>"Mi experiencia en Dota 2 mejoró enormemente gracias a LevelUpCenter y su asesoría personalizada." </p>
+            </li>
+            <li>
+                <img src="./img/Carlos.png" alt="concepto" width="180" height="160">
+                <h4>Carlos, 19 years</h4>
+                <p>"Gracias a LevelUpCenter, mis habilidades en Valorant han alcanzado un nuevo nivel. ¡Muy recomendado!"</p>
+            </li>
+            <li>
+                <img src="./img/Mary.png" alt="concepto" width="180" height="160">
+                <h4>Mary, 26 years</h4>
+                <p>"La comunidad en línea de LevelUpCenter es increíble, he aprendido mucho y conocido jugadores excepcionales." </p>
+            </li>
+
+        </ul>
+
+    </section>
+
+    <!--/Coaches-->
+    <section id=coaches class="coaches">
+        <h3 class="title">Coaches</h3>
+        <p>Our coaches are more than qualified!</p>
+        <br><br>
+        <ul class="grid">
+            <li>
+                <img src="./img/Freddy.png" alt="desarrollo"   width="180" height="160">
+                <h4>Freddy, 24 years</h4>
+                <p>"Mi experiencia en Dota 2 mejoró enormemente gracias a LevelUpCenter y su asesoría personalizada." </p>
+            </li>
+            <li>
+                <img src="./img/Jett.png" alt="concepto" width="180" height="160">
+                <h4>Jett, 22 years</h4>
+                <p>"Como asesor en LevelUpCenter, disfruto ayudando a jugadores a mejorar y lograr sus objetivos."</p>
+            </li>
+            <li>
+                <img src="./img/Anthony.png" alt="concepto" width="180" height="160">
+                <h4>Anthony, 25 years</h4>
+                <p>"Como asesor en LevelUpCenter, puedo aplicar mi experiencia en videojuegos para ayudar a otros a alcanzar sus metas." </p>
+            </li>
+
+        </ul>
+
+    </section>
+
+    <!--/Footer-->
+    <footer>
+        <div class = "grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src = "img/logo app 2.png" alt="Logo">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h3>Contactanos</h3>
+                <p>+51 555555978</p>
+                <p>contacto@LevelUpCenter</p>
+            </div>
+            <div class="box">
+                <h3>Siguenos</h3>
+                <div class="red-social">
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-snapchat"></a>
+                    <a href="#" class="fa fa-pinterest"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>LevelUpCenter</b> - All rights reserved </small>
+        </div>
+
+    </footer>
 
 </body>
 
