add Testimonials, Coaches and Footer

--- a/index.html
+++ b/index.html
@@ -232,17 +232,17 @@
         <br><br>
         <ul class="grid">
             <li>
-                <img src="./img/Alicia.png" alt="desarrollo"   width="180" height="160">
+                <img src="./assets/images/Testimonials, Coaches and Footer/Alicia.png" alt="desarrollo"   width="180" height="160">
                 <h4>Alicia, 22 years</h4>
                 <p>"Mi experiencia en Dota 2 mejoró enormemente gracias a LevelUpCenter y su asesoría personalizada." </p>
             </li>
             <li>
-                <img src="./img/Carlos.png" alt="concepto" width="180" height="160">
+                <img src="./assets/images/Testimonials, Coaches and Footer/Carlos.png" alt="concepto" width="180" height="160">
                 <h4>Carlos, 19 years</h4>
                 <p>"Gracias a LevelUpCenter, mis habilidades en Valorant han alcanzado un nuevo nivel. ¡Muy recomendado!"</p>
             </li>
             <li>
-                <img src="./img/Mary.png" alt="concepto" width="180" height="160">
+                <img src="./assets/images/Testimonials, Coaches and Footer/Mary.png" alt="concepto" width="180" height="160">
                 <h4>Mary, 26 years</h4>
                 <p>"La comunidad en línea de LevelUpCenter es increíble, he aprendido mucho y conocido jugadores excepcionales." </p>
             </li>
@@ -258,17 +258,17 @@
         <br><br>
         <ul class="grid">
             <li>
-                <img src="./img/Freddy.png" alt="desarrollo"   width="180" height="160">
+                <img src="./assets/images/Testimonials, Coaches and Footer/Freddy.png" alt="desarrollo"   width="180" height="160">
                 <h4>Freddy, 24 years</h4>
                 <p>"Mi experiencia en Dota 2 mejoró enormemente gracias a LevelUpCenter y su asesoría personalizada." </p>
             </li>
             <li>
-                <img src="./img/Jett.png" alt="concepto" width="180" height="160">
+                <img src="./assets/images/Testimonials, Coaches and Footer/Jett.png" alt="concepto" width="180" height="160">
                 <h4>Jett, 22 years</h4>
                 <p>"Como asesor en LevelUpCenter, disfruto ayudando a jugadores a mejorar y lograr sus objetivos."</p>
             </li>
             <li>
-                <img src="./img/Anthony.png" alt="concepto" width="180" height="160">
+                <img src="./assets/images/Testimonials, Coaches and Footer/Anthony.png" alt="concepto" width="180" height="160">
                 <h4>Anthony, 25 years</h4>
                 <p>"Como asesor en LevelUpCenter, puedo aplicar mi experiencia en videojuegos para ayudar a otros a alcanzar sus metas." </p>
             </li>
