--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                             <a class="nav-link fs-4" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-4" href="#">Services</a>
+                            <a class="nav-link fs-4" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-4" href="#">Market</a>
+                            <a class="nav-link fs-4" href="#download">Market</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-4" href="#">About us</a>
+                            <a class="nav-link fs-4" href="#aboutus">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-4" href="#">Testimonials</a>
+                            <a class="nav-link fs-4" href="#testimonials">Testimonials</a>
                         </li>
                     </ul>
 
@@ -65,16 +65,16 @@
 
     <main>
         <section class="home">
-            <div class="container text-center">
-                <h1 id="titulo" class="home-h fw-bold">Compete at the highest <br> level and learn from the <br> best</h1>
-                <p id="phrase" class="home-p fs-2">Master your game</p>
+            <div class="container p-0 text-center">
+                <h1 id="titulo" class="fw-bold">Compete at the highest <br> level and learn from the <br> best</h1>
+                <p id="phrase" class="fs-2 mb-5">Master your game</p>
                 <button class="btn mt-5">Start</button>
             </div>
         </section>
     </main>
 
     <!--Services-->
-    <section class="services">
+    <section class="services" id="services">
         <h1 class="title-service">Services</h1>
         <div class="container text-center">
             <div class="row">
@@ -122,7 +122,7 @@
     </section>
 
     <!--Download-->
-    <section class="Download">
+    <section class="Download" id="download">
         <div class="container">
         <div class="row text-center justify-content-center">
             <div class="col-xxl-8 createproduct align-items-center">
@@ -155,7 +155,7 @@
     </section>
 
     <!--About us-->
-    <section class="Abou-Us">
+    <section class="Abou-Us" id="aboutus">
         <div class="container">
         <div class="row aboutus justify-content-center">
             About us
@@ -182,7 +182,7 @@
     </section>
 
     <!--About the Team-->
-    <section class="aboutTheTeam">
+    <section class="aboutTheTeam" id="abouttheteam">
         <div class="container text-center">
             <p class="aboutTheTeam-titulo">About the team</p>
             <div class="row">
@@ -226,7 +226,7 @@
     </section>
 
     <!--Testimonials-->
-    <section id=testimonials class="testimonials">
+    <section id="testimonials" class="testimonials">
         <h3 class="title">Testimonials</h3>
         <p>Learn about the experiences of our Amateur players!</p>
         <br><br>
@@ -252,7 +252,7 @@
     </section>
 
     <!--/Coaches-->
-    <section id=coaches class="coaches">
+    <section id="coaches" class="coaches">
         <h3 class="title">Coaches</h3>
         <p>Our coaches are more than qualified!</p>
         <br><br>
@@ -308,6 +308,8 @@
         </div>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
 
