--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
     <main>
         <section class="home">
+            <img src="/assets/images/Home/principal.png" alt="Background Image" class="home-bg">
             <div class="container p-0 text-center">
                 <h1 id="titulo" class="home-h fw-bold">Compete at the highest <br> level and learn from the <br> best
                 </h1>
@@ -72,6 +73,7 @@
                 <button class="btn mt-5">Start</button>
             </div>
         </section>
+        
 
 
         <!--Services-->
