--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <main>
         <section class="home">
-            <img src="/assets/images/Home/principal.png" alt="Background Image" class="home-bg">
+            <img src="./assets/images/Home/principal.png" alt="Background Image" class="home-bg">
+
             <div class="container p-0 text-center">
                 <h1 id="titulo" class="home-h fw-bold">Compete at the highest <br> level and learn from the <br> best
                 </h1>
